[package]
name = "psi_device_tree"
version = "2.0.0"
edition = "2021"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>", "Daniel Maslowski <info@orangecms.org>"]
license = "MIT"
description = "Reads and parses Linux device tree images"
repository = "https://github.com/mbr/device_tree-rs"
documentation = "https://mbr.github.io/device_tree-rs/device_tree/"

[features]
string-dedup = [] # Requires std

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
